--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,16 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <!--    Database    -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
